<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_fly"
        android:icon="@drawable/ic_fly"
        android:title="@string/title_fly" />

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_hotels"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_short"
        android:title="@string/title_short" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>