<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_fly">

    <fragment
        android:id="@+id/navigation_fly"
        android:name="io.wookoo.flyticketssearch.tickets.screen.TicketsFragment"
        android:label="@string/title_fly"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_hotels"
        android:name="io.wookoo.flyticketssearch.ui.dashboard.DashboardFragment"
        android:label="@string/title_hotels"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_short"
        android:name="io.wookoo.flyticketssearch.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>